add resume for download

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ li::before { content: "→"; position: absolute; left: 0; color: var(--accent); 
         
         <div class="contact-grid">
             <a href="mailto:thayaambika.m@gmail.com" class="contact-item"><i data-lucide="mail" size="16"></i> thayaambika.m@gmail.com</a>
-            <a href="tel:+447459338429" class="contact-item"><i data-lucide="phone" size="16"></i> +44 7459 338429</a>
+            <!-- <a href="tel:+447459338429" class="contact-item"><i data-lucide="phone" size="16"></i> +44 7459 338429</a> -->
             <a href="https://linkedin.com/in/thayaambika/" target="_blank" class="contact-item"><i data-lucide="linkedin" size="16"></i> LinkedIn</a>
             <a href="https://github.com/thaya-murugesan" target="_blank" class="contact-item"><i data-lucide="github" size="16"></i> GitHub</a>
             <span class="contact-item"><i data-lucide="map-pin" size="16"></i> London, UK</span>
